--- a/DDVP/DDVP/Info.plist
+++ b/DDVP/DDVP/Info.plist
@@ -43,7 +43,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>App would like to access your photos for profile setup.</string>
+	<string>App would like to access your photos for profile picture.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -78,5 +78,7 @@
 		<string>Roboto-Thin.ttf</string>
 		<string>Roboto-ThinItalic.ttf</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>App would like to access your photos for profile picture.</string>
 </dict>
 </plist>
